<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@android:color/white">

    <TextView
            android:text="@string/connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connexion"
            android:textSize="24sp" android:textColor="@android:color/black"
            android:textStyle="bold" android:textAlignment="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/input_identifiant" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textColorLink="@android:color/holo_red_dark"
            android:textColorHighlight="@android:color/holo_red_dark" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/input_password" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textColorLink="@android:color/holo_red_dark"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp" app:srcCompat="@drawable/logo_isen_noir"
            android:id="@+id/logo_isen"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/connexion" android:layout_marginTop="15dp"
            android:contentDescription="@string/logo_isen_yncrea"/>
    <Button
            android:text="@string/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_valider" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/input_password"
            android:background="@android:color/holo_red_dark" android:textColor="@android:color/white"
    />
    <TextView
            android:text="@string/identifiant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/input_identifiant"
            android:layout_marginStart="8dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_isen"/>
    <TextView
            android:text="@string/mot_de_passe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_identifiant" app:layout_constraintStart_toStartOf="@+id/input_password"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>