<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PermissionActivity">

    <TextView
            android:text="@string/acc_s_aux_informations_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/en_attente_de_donn_es_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/longitude"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
    <TextView
            android:text="@string/en_attente_de_donn_es_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latitude"
            tools:text="En attente de données GPS"
            app:layout_constraintEnd_toEndOf="@+id/longitude"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/longitude"
            app:layout_constraintStart_toStartOf="@+id/longitude"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@android:drawable/ic_menu_gallery"
            android:id="@+id/photo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" app:layout_constraintEnd_toStartOf="@+id/longitude"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/photo"
            android:layout_marginStart="4dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintHorizontal_bias="0.4"/>
    <TextView
            android:text="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/textView13" app:layout_constraintEnd_toEndOf="@+id/textView13"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactList"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/photo"/>
</android.support.constraint.ConstraintLayout>