<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/divider"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" app:layout_constraintStart_toEndOf="@+id/logo"
            android:layout_marginStart="12dp" android:layout_marginTop="9dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adress"
            app:layout_constraintStart_toEndOf="@+id/logo"
            android:layout_marginStart="12dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            app:layout_constraintStart_toEndOf="@+id/logo"
            android:layout_marginStart="12dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/adress"/>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/mail"
            android:layout_marginTop="12dp"/>
</android.support.constraint.ConstraintLayout>