<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity" android:background="@android:color/white">
    <TextView
            android:text="@string/bonjour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="20dp"
            android:textSize="24sp"/>
    <ImageView
            android:layout_width="191dp"
            android:layout_height="64dp" app:srcCompat="@drawable/logo_isen_noir"
            android:id="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@android:drawable/stat_notify_chat"
            android:id="@+id/imageCycleDeVie"
            android:background="@android:color/holo_red_dark"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageSauvegarde" android:padding="15dp"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@android:drawable/stat_sys_speakerphone"
            android:id="@+id/imagePermissions"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageService"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:padding="15dp"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@android:drawable/stat_sys_download"
            android:id="@+id/imageService"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@+id/imagePermissions" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:padding="15dp"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@android:drawable/stat_notify_sdcard"
            android:id="@+id/imageSauvegarde"
            android:background="@android:color/holo_red_dark"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/imageCycleDeVie"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:cropToPadding="false" android:padding="15dp"/>
    <TextView
            android:text="@string/cycle_de_vie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageCycleDeVie" app:layout_constraintStart_toStartOf="@+id/imageCycleDeVie"
            app:layout_constraintEnd_toEndOf="@+id/imageCycleDeVie"/>
    <TextView
            android:text="@string/sauvegarde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageSauvegarde" app:layout_constraintStart_toStartOf="@+id/imageSauvegarde"
            app:layout_constraintEnd_toEndOf="@+id/imageSauvegarde"/>
    <TextView
            android:text="Certificat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imagePermissions"
            app:layout_constraintEnd_toEndOf="@+id/imagePermissions"
            app:layout_constraintStart_toStartOf="@+id/imagePermissions"/>
    <TextView
            android:text="Certificate Pinning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageService"
            app:layout_constraintStart_toStartOf="@+id/imageService"
            app:layout_constraintEnd_toEndOf="@+id/imageService"/>
    <Button
            android:text="@string/deconnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deconnexion" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="6dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="6dp" android:textSize="10sp"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>